[project]
name = "shocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "pyroute2>=0.9.4",
    "requests>=2.32.5",
]

[project.scripts]
shocker = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
